--- a/amco/css/stylev2.css
+++ b/amco/css/stylev2.css
@@ -255,11 +255,13 @@ html {
   background: #000;
   height: 82px;
   /* LANCE sticky header fade-in */
-  -webkit-animation: sticky-header-appear 0.7s ease-in-out;
+  /* -webkit-animation: sticky-header-appear 0.7s ease-in-out;
   -moz-animation:    sticky-header-appear 0.7s ease-in-out;
   -o-animation:      sticky-header-appear 0.7s ease-in-out;
-  animation:         sticky-header-appear 0.7s ease-in-out;
+  animation:         sticky-header-appear 0.7s ease-in-out; */
 
+  /* LANCE only background of sticky  menu fades in */
+  transition: background 1s;
 }
 
 .sticky #social {
@@ -275,14 +277,14 @@ html {
 }
 
 .sticky #mnue {
-  right: 0px !important;
+  right: 4px !important;
   top: 24px !important;
   /* lance unset bottom when sticky menu to get rid of unclickable glitch on artist */
   bottom: unset;
   position: fixed;
   z-index: 99;
   width: 280px;
-  padding-right: 16px;
+  padding-right: 25px;
 }
 
 .sticky #mnue a {
@@ -483,7 +485,7 @@ a{
         background-image:url(../img/logo.svg);
     }
     #socialFooter{
-        z-index: 999;
+        z-index: 998;
         position: relative;
     }
     #socialFooter a{
@@ -685,7 +687,7 @@ a{
 	  padding: 45px 35px !important;
 	}
 
-	.col-lg-3 {
+	.col-lg-4 {
 		padding-left: 3px !important;
 		padding-right: 3px !important;
 		margin-bottom: -14px !important;
@@ -706,7 +708,12 @@ a{
 
 	.sticky #mnue a {
 		font-size: 20px !important;
-		padding-right: 18px !important;
+		padding-right: 4px !important;
+	}
+
+	.fttex {
+		margin-left: 15px;
+		margin-right: 15px;
 	}
 
   .apparitionVideo{
@@ -902,6 +909,7 @@ a{
   width: 425px;
   margin: 0 auto;
 }
+
 @media (min-width: 1115px) {
   /* LANCE make artist grid responsive */
 
@@ -1079,13 +1087,13 @@ a{
     font-size: 13px !important;
   }
 
-  .col-lg-3 {
+  .col-lg-4 {
 	  padding-left: 4px !important;
 	  padding-right: 4px !important;
   }
   .sticky #mnue a {
 	  font-family: 'Futura Book', sans-serif;
-	  padding-right: 17px;
+	  padding-right: 2px;
   }
 }
 .artname2 {
@@ -1374,6 +1382,10 @@ a{
   .sticky #mnue a {
 	  font-size: 20px;
   }
+  .sticky #mnue {
+	  padding-right: 0px;
+	  right: -10px !important;
+  }
   .sticky .icon {
 	  width: 35px;
 	  height: 35px;
@@ -1457,7 +1469,7 @@ a{
 
 /* lance column in artist page margins */
 
-.col-lg-3 {
+.col-lg-4 {
 	padding-left: 6px;
 	padding-right: 6px;
 	margin-bottom: -12px;
