--- a/RODWAVE2021/css/style.css
+++ b/RODWAVE2021/css/style.css
@@ -162,8 +162,8 @@ a.disabled {
 
 @media only screen and (max-width: 768px) {
 	body {
-		/* background-size: cover;
-		background-position: right; */
+		background-size: cover;
+		background-position: center center;
 		font-size: 17px;
 	}
 
