--- a/RODWAVE2021/css/style.css
+++ b/RODWAVE2021/css/style.css
@@ -12,9 +12,29 @@ body {
 	font-weight: 300;
 }
 
+.content {
+	font-size: 19px;
+	margin: 30px;
+	width: 80vw;
+	max-width: 700px;
+	margin: auto;
+}
+
+#openingparagraph {
+	font-size: 22px;
+	line-height: 2;
+	margin-bottom: 25px;
+}
+
 .testimonials {
 	width: auto;
 	margin: auto;
+}
+
+.entry_submission {
+	background-color: #000000;
+	padding: 35px;
+	border-radius: 10px;
 }
 
 p {
@@ -142,13 +162,6 @@ a.disabled {
 	 background-color: #FFFFFF;
 }
 
-.content {
-	margin: 30px;
-	width: 80vw;
-	max-width: 700px;
-	margin: auto;
-}
-
 /* #sc_footer_embed {
 	transform: scale(0.8);
 } */
@@ -213,6 +226,16 @@ a.disabled {
 		font-size: 17px;
 	}
 
+	.content {
+		font-size: 15px;
+	}
+
+	#openingparagraph {
+		font-size: 18px;
+		line-height: 1.8;
+		margin-bottom: 25px;
+	}
+
 	.header {
 		padding-top: 27px;
 		width: 67vw;
@@ -262,5 +285,9 @@ a.disabled {
 	#testimonialembed {
 		width: 70vw;
 		height: 500px;
+	}
+
+	#fname, #lname, #city, #state, #zipcode {
+		width: 85%;
 	}
 }
