--- a/RODWAVE2021/css/style.css
+++ b/RODWAVE2021/css/style.css
@@ -12,18 +12,35 @@ body {
 	font-weight: 300;
 }
 
+/* background fix for mobile */
+body:after{
+	content:"";
+	position:fixed; /* stretch a fixed position to the whole screen */
+	top:0;
+	height:100vh; /* fix for mobile browser address bar appearing disappearing */
+	left:0;
+	right:0;
+	z-index:-1; /* needed to keep in the background */
+	background: url("../assets/background.jpg") center top;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 .content {
 	font-size: 19px;
 	margin: 30px;
-	width: 80vw;
-	max-width: 700px;
+	width: 82vw;
+	max-width: 780px;
 	margin: auto;
 }
 
 #openingparagraph {
 	font-size: 22px;
 	line-height: 2;
-	margin-bottom: 25px;
+	margin-bottom: 40px;
+	margin-top: 15px;
 }
 
 .testimonials {
@@ -33,8 +50,11 @@ body {
 
 .entry_submission {
 	background-color: #000000;
-	padding: 35px;
-	border-radius: 10px;
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-bottom: 26px;
+	padding-top: 60px;
+	/* border-radius: 10px; */
 }
 
 p {
@@ -85,6 +105,20 @@ select {
 	background-color: #FFFFFF;
 }
 
+/* FOR DISABLED/GREY STYLE ON BIRTHDATE SELECTOR TEXT */
+
+select:required:invalid {
+  color: gray;
+}
+option[value=""][disabled] {
+  display: none;
+}
+option {
+  color: black;
+}
+
+/* END DISABLED/GREY STYLE */
+
 #testimonialembed {
 	margin: auto;
 	padding-top: 30px;
@@ -93,7 +127,7 @@ select {
 .header {
 	margin: auto;
 	padding-top: 25px;
-	width: 40vw;
+	width: 44vw;
 	min-width: 400px;
 }
 
@@ -117,19 +151,6 @@ a.disabled {
 	pointer-events: none;
 	cursor: default;
 	opacity: 0.5;
-}
-
-.calltoaction {
-	margin: auto;
-	margin-top: 40px;
-	width: 28vw;
-	min-width: 400px;
-}
-
-.streaming {
-	margin: auto;
-	text-align: center;
-	margin-top: 17px;
 }
 
 .streamingimg {
@@ -183,9 +204,9 @@ a.disabled {
 }
 
 .splashcontent {
-	width: 40vw;
+	width: 45vw;
 	max-width: 800px;
-	min-width: 350px;
+	min-width: 380px;
 	margin: 0;
     position: absolute;
     top: 50%;
@@ -202,43 +223,72 @@ a.disabled {
 	margin-bottom: 30px;
 }
 
+.footer {
+	padding-top: 50px;
+}
+
 /* hover effects only on web - so no sticky hover on mobile */
 @media (hover: hover) {
-	.footerlogoimg:hover, .streamingimg:hover, .rodbuttonimg:hover {
+	.footerlogoimghover:hover, .streamingimg:hover, .rodbuttonimg:hover {
 		opacity: 0.7;
 		transition: opacity 0.3s;
 		-webkit-transition: opacity 0.3s;
 	}
 }
 
-.footerlogoimg:active, .streamingimg:active, .rodbuttonimg:active {
+.footerlogoimghover:active, .streamingimg:active, .rodbuttonimg:active {
 	opacity: 0.5;
 	transition: opacity 0.3s;
 	-webkit-transition: opacity 0.3s;
 }
 
+@media (max-width: 768px) {
+	.footer {
+		padding-top: 30px;
+	}
+	.alignleft {
+		float: none;
+	}
+	.alignright {
+		float: none;
+		clear: both;
+		display: block;
+		margin: auto;
+		text-align: center;
+		padding-top: 45px;
+		padding-bottom: 60px;
+	}
+
+	.footerlogoimg {
+		width: 30vw;
+		min-width: 120px;
+		margin: auto;
+	}
+
+}
 /* MOBILE */
 
 @media only screen and (max-width: 768px) {
 	body {
 		background-size: cover;
 		background-position: center center;
-		font-size: 17px;
+		font-size: 19px;
 	}
 
 	.content {
-		font-size: 15px;
+		font-size: 17px;
+		width: 85vw;
 	}
 
 	#openingparagraph {
-		font-size: 18px;
+		font-size: 20px;
 		line-height: 1.8;
 		margin-bottom: 25px;
 	}
 
 	.header {
 		padding-top: 27px;
-		width: 67vw;
+		width: 80vw;
 		min-width: 0;
 	}
 
@@ -250,38 +300,6 @@ a.disabled {
 		display: initial;
 	}
 
-	.calltoaction {
-		width: 65vw;
-		min-width: 150px;
-		margin-top: 33px;
-	}
-
-	.rodbuttonimg {
-		margin-top: 18px;
-		width: 25vw;
-		min-width: 0;
-	}
-
-	.streaming {
-		margin-top: 12px;
-	}
-
-	.streamingimg {
-		width: 23vw;
-		min-width: 0;
-		margin-top: 14px;
-		margin-left: 8px;
-		margin-right: 8px;
-	}
-
-	.footerlogoimg {
-		width: 25vw;
-		min-width: 0;
-		margin-bottom: 20px;
-		margin-left: 5vw;
-		margin-right: 5vw;
-	}
-
 	#testimonialembed {
 		width: 70vw;
 		height: 500px;
@@ -289,5 +307,14 @@ a.disabled {
 
 	#fname, #lname, #city, #state, #zipcode {
 		width: 85%;
+	}
+
+	.splashcontent {
+		min-width: 350px;
+	}
+
+	.entry_submission {
+		padding-left: 30px;
+		padding-right: 30px;
 	}
 }
